--- a/akag.css
+++ b/akag.css
@@ -7,7 +7,7 @@
 
 /*Variáveis do arquivo*/
 :root {
-	/*Variáveis de cor*/
+  /*Variáveis de cor*/
 }
 
 /*Resete dos elementos html*/
@@ -15,13 +15,13 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-		  box-sizing: border-box;
+  box-sizing: border-box;
 }
 html,
 body {
   width: 100%;
   height: 100vh;
-  
+
   font-family: sans-serif;
   font-size: 1rem;
   line-height: 1.15;
@@ -29,18 +29,18 @@ body {
   -ms-text-size-adjust: 100%;
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: transparent;
-   overflow-x:hidden;
+  overflow-x: hidden;
 }
 
 article,aside,details,dialog,figcaption,figure,
 footer,header,hgroup,main,menu,nav,section {
-	display:block
+  display: block;
 }
 
 a {
-	text-decoration: none;
-	background-color: transparent;
-	-webkit-text-decoration-skip: objects;
+  text-decoration: none;
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
@@ -52,7 +52,8 @@ a:not([href]):not([tabindex]) {
   text-decoration: none;
 }
 
-a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+a:not([href]):not([tabindex]):hover,
+a:not([href]):not([tabindex]):focus {
   color: inherit;
   text-decoration: none;
 }
@@ -69,4 +70,3 @@ strong {
 small {
   font-size: 65%;
 }
-
