--- a/akag.css
+++ b/akag.css
@@ -2,7 +2,7 @@
  * Akag v4.0.0 (https://getbootstrap.com)
  * Copyright 2011-2018 The Akag Authors
  * Copyright 2011-2018 Igor Henrique da Silva.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ * Licensed under MIT (https://digitccode.github.io/framework/akag.css)
  */
 
 /*Variáveis do arquivo*/
