--- a/akag.css
+++ b/akag.css
@@ -74,8 +74,8 @@ small {
 /*======================================================*/
 
 .a-box {
-  margin-top: 1rem;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1rem;
+  margin-top: 1rem !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-bottom: 1rem !important;
 }
