--- a/akag.css
+++ b/akag.css
@@ -99,3 +99,11 @@ small {
 	justify-content: center;
 	text-align: center;
 }
+
+/*======================================================*/
+
+i[class="help.c"] {
+	width: 50px;
+	height: 50px;
+	background-image: url('icons/logo-help-c.png');
+}
