--- a/akag.css
+++ b/akag.css
@@ -102,7 +102,7 @@ small {
 
 /*======================================================*/
 
-i[class="help.c"] {
+i[class="helpC"] {
 	width: 50px;
 	height: 50px;
 	background-image: url('icons/logo-help-c.png');
