--- a/akag.css
+++ b/akag.css
@@ -106,4 +106,6 @@ i[class="helpC"] {
 	width: 50px;
 	height: 50px;
 	background-image: url('icons/logo-help-c.png');
+	background-position: center center;
+	background-size: 50px;
 }
